# smscan

./: .env  .gitignore  Cargo.toml  Dockerfile.node  Dockerfile.smscan  LICENSE  build.rs  build_and_push.sh  build_and_push_ci.sh  docker-compose.dev.yml  docker-compose.prod.yml  package.json  pnpm-lock.yaml  tailwind.config.cjs
.github/workflows/: docker.yml
assets/: main.css
src/: main.rs
src/components/: global_state.rs
src/db_entities/: accounts.rs  activesets.rs  atxs.rs  ballots.rs  beacons.rs  block_transactions.rs  blocks.rs  certificates.rs  identities.rs  layers.rs  mod.rs  poets.rs  prelude.rs  proposal_transactions.rs  proposals.rs  recovery.rs  rewards.rs  transactions.rs  transactions_results_addresses.rs
src/pages/: account.rs  address.rs  home.rs  layer.rs  mod.rs
styles/: tailwind.css
templates/components/: footer.html  header.html  search.html
templates/components/account/: account.html  account_tab.html  rewards_tab.html  transactions_tab.html
templates/components/home/: blocks.html  global_state.html  hero.html  home.html  layers.html  rewards.html  transactions.html
templates/components/layer/: blocks_tab.html  layer.html  layer_tab.html  rewards_tab.html  transactions_tab.html
templates/layouts/: base.html
templates/pages/: account.html  home.html  layer.html
