[package]
name = "smscan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
askama = "0.12"
axum = "0.7.2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
dotenv = "0.15.0"
tower-livereload = "0.9.1"
serde = { version = "1.0.193", features = ["derive"] }
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-time",
    "with-json",
    "with-rust_decimal",
    "with-bigdecimal",
    "with-uuid",
] }
chrono = "0.4.31"
