[package]
name = "smscan"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "=1.0.79"
askama = "=0.12.1"
axum = "=0.7.4"
tokio = { version = "=1.36.0", features = ["full"] }
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter"] }
tower = { version = "=0.4.13", features = ["util"] }
tower-http = { version = "=0.5.1", features = ["fs", "trace"] }
dotenv = "=0.15.0"
tower-livereload = "=0.9.1"
serde = { version = "=1.0.196", features = ["derive"] }
sea-orm = { version = "=0.12.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-time",
    "with-json",
    "with-rust_decimal",
    "with-bigdecimal",
    "with-uuid",
] }
chrono = "=0.4.33"
hex = "=0.4.3"
serde_json = "=1.0.113"
base64 = "=0.21.7"
